# the-network

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commands.md  docker-compose.release.yml  docker-compose.yml  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bot/: __init__.py  client.py  config.py  constants.py  context.py  logging_config.py  main.py
bot/cogs/: _autocomplete.py  _checks.py  network.py  relay.py  servers.py
bot/db/: connection.py  migrations.py  models.py  repositories.py
bot/domain/: errors.py  network.py  network_route.py  profile.py  profile_image.py  (+2 more)
deploy/: GITHUB.md  RASPBERRY_PI.md  TOPGG.md  deploy.sh  topgg-listing.md
doc/: architecture.md  design-spec.md  intake-summary.md  product-brief.md  traceability.md  wireframe-plan.md  wireframes.md
tests/: conftest.py  test_bot_settings.py  test_channel_names.py  test_config.py  test_discord_cleanup.py  test_discord_errors.py  test_emoji_service.py  test_guild_init.py  test_guild_layout.py  test_guild_permissions.py  test_image_service.py  test_join_requests_sticky.py  test_message_formatter.py  test_migrations.py  test_network_cleanup.py  test_network_provision.py  test_network_repository.py  test_network_validation.py  test_profile_cleanup.py  test_profile_create_sync.py  test_profile_parser.py  test_profile_post.py  test_profile_provision.py  test_profile_prune.py  test_profile_repository.py  test_profile_sticky_sync.py  test_profile_sync.py  test_relay_service.py  test_routing_service.py  test_rules_sticky.py  test_topgg.py  test_ui_custom_ids.py
(+30 files in other folders)
