[project]
name = "the-network"
version = "1.0.0"
description = "Discord announcement network relay bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4,<3",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
the-network = "bot.main:cli_main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bot*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["work", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["bot"]
plugins = ["pydantic.mypy"]
